testsuite/tests/th/T10279.stderr
T10279.hs:11:9: error: [GHC-51294]
    • Failed to load interface for ‘A’.
      no unit id matching ‘ghc-internal-9.1300.0’ was found
      (This unit-id looks like a source package name-version; candidates real unit-ids are:
       ‘ghc-internal’)
    • In the untyped splice:
        $(conE
            (Name
               (mkOccName "Foo")
               (NameG
                  VarName (mkPkgName ("ghc-internal-" <> pkg_version))
                  (mkModName "A"))))

